# datajob_ETL

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  airflow_setup.md  compose.yaml  create_database.py  docker-compose-airflow.yaml  docker-compose.pipeline.yml  evaluate.ps1  main.py  optimize_postgres.sql  pyproject.toml  pytest.ini  requirements.txt  run-docker-pipeline.ps1  start_airflow.ps1  test_data_sample.csv  test_db_connection.py  test_postgres_connection.py
.github/workflows/: ci.yml  code-quality.yml
Extraction/: extraction.py
airflow_dags/: datajob_etl_dag.py
datajob_etl/: .user.yml  dbt_project.yml  profiles.yml.example
datajob_etl/macros/: data_quality_macros.sql
datajob_etl/models/marts/dimensions/: dim_companies.sql  dim_countries.sql  dim_locations.sql  dim_schedule_types.sql  dim_short_titles.sql  dim_skills.sql  dim_types.sql  dim_vias.sql  schema.yml
datajob_etl/models/marts/facts/: fact_job_posts.sql  schema.yml
datajob_etl/models/marts/relationships/: job_skills.sql  schema.yml  skill_types.sql
datajob_etl/models/staging/: schema.yml  sources.yml  stg_job_postings.sql  stg_job_skills.sql
datajob_etl/tests/: bridge_job_skills.sql  bridge_skill_types.sql  dates_valid.sql  fks_valid.sql  location_defined.sql  pks_defined.sql  required_fields.sql  salary_consistent.sql  salary_exclusive.sql  salary_ranges.sql  schedule_normalized.sql  schema.yml  test_boolean_fields_are_valid.sql  validate_no_duplicates.sql  via_cleaned.sql
db/: __init__.py
db/config/: db.py
db/data_models/: __init__.py  companies.py  countries.py  job_posting.py  job_posts.py  job_skills.py  locations.py  schedule_types.py  short_titles.py  skill_types.py  skills.py  types.py  vias.py
extraction/: __init__.py  extraction.py
tests/: test_business_logic.py  test_extraction.py  test_transformation.py
utils/: __init__.py  analysis.py  analyze_dataset.py  generate_dbt_profile.py  job_posting_3NF.sql  job_posting_3NF.txt  logging_config.py  setup_dbt_profile.py  system_optimizer.py
