[tool.poetry]
name = "datajob-etl"
version = "0.1.0"
description = "Pipeline ETL para análisis de datos de empleos"
authors = ["Harrison Zuleta Montoya <harrison.zmontoya@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
pandas = "^2.1.4"
psycopg2-binary = "^2.9.9"
dbt-core = "^1.7.4"
dbt-postgres = "^1.7.4"
psutil = "^5.9.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"